[gd_scene load_steps=2 format=2]

[ext_resource path="res://Button.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button2" type="Button" parent="."]
margin_left = 340.0
margin_top = 43.0
margin_right = 483.0
margin_bottom = 102.0
text = "ADICIONE NA LISTA "

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 354.0
margin_top = 161.0
margin_right = 491.0
margin_bottom = 224.0

[node name="Button" type="Button" parent="."]
margin_left = 71.0
margin_top = 34.0
margin_right = 208.0
margin_bottom = 100.0
text = "MINHA LISTA"

[node name="Lista" type="Label" parent="."]
margin_left = 78.0
margin_top = 129.0
margin_right = 208.0
margin_bottom = 332.0

[node name="Label2" type="Label" parent="."]
margin_left = 373.0
margin_top = 228.0
margin_right = 510.0
margin_bottom = 446.0

[node name="escreva" type="Label" parent="."]
margin_left = 345.0
margin_top = 119.0
margin_right = 481.0
margin_bottom = 145.0
text = "escreva embaixo"
align = 1
valign = 1

[node name="Button3" type="Button" parent="."]
margin_left = 603.0
margin_top = 46.0
margin_right = 716.0
margin_bottom = 96.0
text = "TEXTO"

[node name="Texto" type="Label" parent="."]
margin_left = 570.0
margin_top = 158.0
margin_right = 718.0
margin_bottom = 249.0
align = 1
valign = 1

[node name="Button4" type="Button" parent="."]
margin_left = 816.0
margin_top = 46.0
margin_right = 921.0
margin_bottom = 98.0
text = "INSIRA UM VALOR "

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 827.0
margin_top = 158.0
margin_right = 943.0
margin_bottom = 211.0

[node name="Label" type="Label" parent="."]
margin_left = 808.0
margin_top = 256.0
margin_right = 947.0
margin_bottom = 456.0

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
